--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2229,7 +2229,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2022/10/18 v1.87 Typesetting articles for the Association for Computing Machinery]
+[2022/10/19 v1.88 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -4276,7 +4276,8 @@
 % several journals}
 % \changes{1.84}{2022/04/09}{New journals: JDS, GAMES}
 % \changes{1.85}{2022/05/08}{New journal: JRC}
-% \changes{1.85}{2022/10/18}{New journals: ACMJCSS, JATS, TORS}
+% \changes{1.87}{2022/10/18}{New journals: ACMJCSS, JATS, TORS}
+% \changes{1.88}{2022/10/19}{Added ISSN for GAMES}
 %
 % We use the |xkeyval| interface to define journal titles and the relevant
 % information
@@ -4385,6 +4386,7 @@
 \or % GAMES
   \def\@journalName{ACM Games: Research and Practice}%
   \def\@journalNameShort{ACM Games}%
+  \def\@permissionCodeOne{2832-5516}%
 \or % HEALTH
   \def\@journalName{ACM Transactions on Computing for Healthcare}%
   \def\@journalNameShort{ACM Trans. Comput. Healthcare}%
