--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.88   New ISSNs
+
 Version 1.87   CC license is allowed for non-acm documents and ACM Engage
 	       documents only
 	       New format acmcp for the cover page
