--- a/README
+++ b/README
@@ -13,6 +13,7 @@ The production version is the one on CTAN and ACM sites.
 Changes
 
 Version 1.88   New ISSNs
+	       Documentation updates
 
 Version 1.87   CC license is allowed for non-acm documents and ACM Engage
 	       documents only
