Added journal and moved title

--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Changes
 
 Version 1.88   New ISSNs
 	       Documentation updates
+	       New journal:  PACMNET
 
 Version 1.87   CC license is allowed for non-acm documents and ACM Engage
 	       documents only
