the "axiom" theorem style
Would be great to have it too

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1485,6 +1485,7 @@
 %   |theorem|,
 %   |conjecture|,
 %   |proposition|,
+%   |axiom|,
 %   |lemma| and
 %   |corollary|, and
 % \item[acmdefinition:] this is the style used for
@@ -8293,6 +8294,9 @@
   }{}
   \@ifundefined{lemma}{%
   \newtheorem{lemma}[theorem]{Lemma}
+  }{}
+  \@ifundefined{axiom}{%
+  \newtheorem{axiom}[theorem]{Axiom}
   }{}
   \@ifundefined{corollary}{%
   \newtheorem{corollary}[theorem]{Corollary}
