Fixed undefined reference in documentation

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1015,7 +1015,7 @@
 % command are listed in Table~\ref{tab:setcopyright}.  This command
 % must be placed in the preamble, before |\begin{document}|.
 % Additional information about ACM copyright rules is discussed in
-% Section~\ref{ug_cc}.
+% Section~\ref{sec:ug_cc}.
 %
 % \begin{table}
 %   \centering
