--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.89   Bug fixes
+
 Version 1.88   New ISSNs
 	       Documentation updates
 	       New journal:  PACMNET
