--- a/acmart.dtx
+++ b/acmart.dtx
@@ -926,7 +926,7 @@
 % class provides commands to add these badges:
 % \cs{acmBadgeR}\oarg{url}\marg{graphics} and
 % \cs{acmBadgeL}\oarg{url}\marg{graphics}.  The first command puts the
-% badge to the right of the title, and the second one---to the left.
+% badge to the right of page, and the second one---to the left.
 % The arguments have the following meaning: \oarg{url}, if provided,
 % sets the link to the badge authority in the screen version, while
 % \marg{graphics} sets the graphics file with the badge image.  The
@@ -936,7 +936,7 @@
 % \begin{verbatim}
 % \acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 % \end{verbatim}
-%
+% The commands can be repeated, if a paper has several badges.  
 %
 %
 % \DescribeMacro{\startPage}%
@@ -5204,13 +5204,7 @@
 %
 % \begin{macro}{\if@ACM@badge}
 % \changes{v1.06}{2016/05/01}{Added macro}
-%   Whether to print a badge.  Note that either a left or right badge
-%   triggers it:
-%    \begin{macrocode}
-\newif\if@ACM@badge
-\@ACM@badgefalse
-%    \end{macrocode}
-%
+% \changes{v1.89}{2022/12/27}{Deleted macro}
 % \end{macro}
 %
 % \begin{macro}{\@ACM@badge@width}
@@ -5218,7 +5212,7 @@
 %   The width of the badge
 %    \begin{macrocode}
 \newlength\@ACM@badge@width
-\setlength\@ACM@badge@width{5pc}
+\setlength\@ACM@badge@width{3pc}
 %    \end{macrocode}
 %
 % \end{macro}
@@ -5226,7 +5220,7 @@
 %
 % \begin{macro}{\@ACM@title@width}
 % \changes{v1.06}{2016/05/01}{Added macro}
-%   The width of the badge
+%   The width of the title
 %    \begin{macrocode}
 \newlength\@ACM@title@width
 %    \end{macrocode}
@@ -5236,39 +5230,73 @@
 %
 % \begin{macro}{\@ACM@badge@skip}
 % \changes{v1.06}{2016/05/01}{Added macro}
-%   The space between the badge and the title
+% \changes{v1.89}{2022/12/27}{Redefined macro}
+%   The spacing between badges
 %    \begin{macrocode}
 \newlength\@ACM@badge@skip
-\setlength\@ACM@badge@skip{1pc}
+\setlength\@ACM@badge@skip{1pt}
 %    \end{macrocode}
 %
 % \end{macro}
 %
+% \begin{macro}{\@acmBadgeR}
+% \changes{v1.89}{2022/12/27}{Introduced macro}
+%    \begin{macrocode}
+\def\@acmBadgeR{}
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@acmBadgeL}
+% \changes{v1.89}{2022/12/27}{Introduced macro}
+%    \begin{macrocode}
+\def\@acmBadgeL{}
+%    \end{macrocode}
+% \end{macro}
+% 
 % \begin{macro}{\acmBadgeR}
 % \changes{v1.06}{2016/05/01}{Added macro}
+% \changes{v1.89}{2022/12/27}{Redefined macro}
 %   Setting the right badge
 %    \begin{macrocode}
-\newcommand\acmBadgeR[2][]{\@ACM@badgetrue
-  \def\@acmBadgeR@url{#1}%
-  \def\@acmBadgeR@image{#2}}
-\def\@acmBadgeR@url{}
-\def\@acmBadgeR@image{}
+\newcommand\acmBadgeR[2][]{%
+  \ifx\@acmBadgeR\@empty
+    \gdef\@acmBadgeR{%
+      \smash{%
+        \raisebox{0.5\height}{%
+          \href{#1}{\includegraphics[width=\@ACM@badge@width]{#2}}}}}%
+  \else
+    \g@addto@macro{\@acmBadgeR}{%
+      \hspace{\@ACM@badge@skip}%
+      \smash{%
+        \raisebox{0.5\height}{%
+          \href{#1}{\includegraphics[width=\@ACM@badge@width]{#2}}}}}%
+  \fi}
 %    \end{macrocode}
 %
 % \end{macro}
 %
 % \begin{macro}{\acmBadgeL}
 % \changes{v1.06}{2016/05/01}{Added macro}
+% \changes{v1.89}{2022/12/27}{Redefined macro}
 %   Setting the left badge
 %    \begin{macrocode}
-\newcommand\acmBadgeL[2][]{\@ACM@badgetrue
-  \def\@acmBadgeL@url{#1}%
-  \def\@acmBadgeL@image{#2}}
-\def\@acmBadgeL@url{}
-\def\@acmBadgeL@image{}
+\newcommand\acmBadgeL[2][]{%
+  \ifx\@acmBadgeL\@empty
+    \gdef\@acmBadgeL{%
+      \smash{%
+        \raisebox{0.5\height}{%
+          \href{#1}{\includegraphics[width=\@ACM@badge@width]{#2}}}}}%
+  \else
+    \g@addto@macro{\@acmBadgeL}{%
+      \hspace{\@ACM@badge@skip}%
+      \smash{%
+        \raisebox{0.5\height}{%
+          \href{#1}{\includegraphics[width=\@ACM@badge@width]{#2}}}}}%
+  \fi}
 %    \end{macrocode}
 %
 % \end{macro}
+%
 %
 %
 % \begin{macro}{\startPage}
@@ -6406,9 +6434,9 @@
 % \changes{v1.46}{2017/08/29}{Deleted rule}
 % \changes{v1.78}{2021/05/16}{Added processing the overflowing title box}
 % \changes{1.85}{2022/05/08}{Added: acmengage}
+% \changes{1.89}{2022/12/27}{Moved badges to top header}
 % The printing of top matter starts a new page and uses the given
-%   title box.  Note that for |sigchi-a| we print badges here rather
-%   than in \cs{mktitle} since we want them in the margins.
+%   title box.  
 %
 % Note that if there are too many authors, |\mktitle@bx| might
 % overflow the page.  Therefore we start with checking this and if
@@ -6453,18 +6481,6 @@
     \twocolumn[\box\mktitle@bx]%
   \or % sigchi-a
     \par\box\mktitle@bx\par\bigskip
-    \if@ACM@badge
-       \marginpar{\noindent
-         \ifx\@acmBadgeL@image\@empty\else
-           \href{\@acmBadgeL@url}{%
-             \includegraphics[width=\@ACM@badge@width]{\@acmBadgeL@image}}%
-            \hskip\@ACM@badge@skip
-          \fi
-         \ifx\@acmBadgeR@image\@empty\else
-           \href{\@acmBadgeR@url}{%
-             \includegraphics[width=\@ACM@badge@width]{\@acmBadgeR@image}}%
-          \fi}%
-    \fi
   \or % acmengage
     \twocolumn[\box\mktitle@bx]%
   \or % acmcp
@@ -6587,6 +6603,7 @@
 % \cs{translatedsubtitle}}
 % \changes{v1.87}{2022/08/14}{Special treatment for acmcp}
 % \changes{v1.88}{2022/10/24}{Moved down title for acmcp}
+% \changes{v1.89}{2022/12/27}{Moved badges to top header}
 %   The version of \cs{mktitle} for most journals
 %    \begin{macrocode}
 \def\@mktitle@i{\hsize=\textwidth
@@ -6594,20 +6611,7 @@
     \advance\hsize by -6pc%
   \fi
   \@ACM@title@width=\hsize
-  \ifx\@acmBadgeL@image\@empty\else
-    \advance\@ACM@title@width by -\@ACM@badge@width
-    \advance\@ACM@title@width by -\@ACM@badge@skip
-  \fi
-  \ifx\@acmBadgeR@image\@empty\else
-    \advance\@ACM@title@width by -\@ACM@badge@width
-    \advance\@ACM@title@width by -\@ACM@badge@skip
-  \fi
   \setbox\mktitle@bx=\vbox{\noindent\@titlefont
-    \ifx\@acmBadgeL@image\@empty\else
-      \raisebox{-.5\baselineskip}[\z@][\z@]{\href{\@acmBadgeL@url}{%
-          \includegraphics[width=\@ACM@badge@width]{\@acmBadgeL@image}}}%
-      \hskip\@ACM@badge@skip
-    \fi
     \if@ACM@acmcp
     \vspace*{108.5\p@}\par\noindent
     \fi
@@ -6617,11 +6621,6 @@
   \ifx\@subtitle\@empty\else
     \par\noindent{\@subtitlefont\@subtitle\@translatedsubtitle}%
   \fi}%
-  \ifx\@acmBadgeR@image\@empty\else
-    \hskip\@ACM@badge@skip
-    \raisebox{-.5\baselineskip}[\z@][\z@]{\href{\@acmBadgeR@url}{%
-        \includegraphics[width=\@ACM@badge@width]{\@acmBadgeR@image}}}%
-  \fi
   \par\bigskip}}%
 %    \end{macrocode}
 %
@@ -6639,37 +6638,18 @@
 % \changes{v1.06}{2016/05/01}{Added processing badges}
 % \changes{v1.83}{2022/02/20}{Added \cs{translatedtitle} and
 % \cs{translatedsubtitle}} 
-%   The version of \cs{@mktitle} for SIG proceedings.  Note that since
-%   the title is centered, we leave space for the left badge even if
-%   only the right badge is defined.
+% \changes{v1.89}{2022/12/27}{Moved badges to top header}
+%   The version of \cs{@mktitle} for SIG proceedings.  
 %    \begin{macrocode}
 \def\@mktitle@iii{\hsize=\textwidth
     \setbox\mktitle@bx=\vbox{\@titlefont\centering
       \@ACM@title@width=\hsize
-      \if@ACM@badge
-        \advance\@ACM@title@width by -2\@ACM@badge@width
-        \advance\@ACM@title@width by -2\@ACM@badge@skip
-        \parbox[b]{\@ACM@badge@width}{\strut
-          \ifx\@acmBadgeL@image\@empty\else
-            \raisebox{-.5\baselineskip}[\z@][\z@]{\href{\@acmBadgeL@url}{%
-                \includegraphics[width=\@ACM@badge@width]{\@acmBadgeL@image}}}%
-          \fi}%
-        \hskip\@ACM@badge@skip
-      \fi
       \parbox[t]{\@ACM@title@width}{\centering\@titlefont
         \@title\@translatedtitle%
         \ifx\@subtitle\@empty\else
           \par\noindent{\@subtitlefont\@subtitle\@translatedsubtitle}
         \fi
       }%
-      \if@ACM@badge
-        \hskip\@ACM@badge@skip
-        \parbox[b]{\@ACM@badge@width}{\strut
-          \ifx\@acmBadgeR@image\@empty\else
-            \raisebox{-.5\baselineskip}[\z@][\z@]{\href{\@acmBadgeR@url}{%
-                \includegraphics[width=\@ACM@badge@width]{\@acmBadgeR@image}}}%
-          \fi}%
-      \fi
       \par\bigskip}}%
 %    \end{macrocode}
 %
@@ -7844,6 +7824,7 @@
 % journal format}
 % \changes{v1.59}{2019/04/20}{Moved page styles to \cs{AtBeginDocument}}
 % \changes{v1.87}{2022/08/14}{Special treatment for acmcp}
+% \changes{v1.89}{2022/12/27}{Moved badges here}
 %   The page style for the first page only.
 %    \begin{macrocode}
 \AtBeginDocument{%
@@ -7854,7 +7835,8 @@
   \if@ACM@journal@bibstrip
     \ifcase\ACM@format@nr
     \relax % manuscript
-      \fancyhead[L]{\ACM@linecountL}%
+      \fancyhead[L]{\ACM@linecountL\@acmBadgeL}%
+      \fancyhead[R]{\@acmBadgeR}%
       \fancyfoot[RO,LE]{\if@ACM@printfolios\small\thepage\fi}%
       \if@ACM@nonacm\else%
         \fancyfoot[RE,LO]{\footnotesize Manuscript submitted to ACM}%
@@ -7865,9 +7847,10 @@
         \@acmNumber, Article \@acmArticle.  Publication date:
         \@acmPubDate.}%
       \fi%
-      \fancyhead[LE]{\ACM@linecountL\@folioblob}%
-      \fancyhead[LO]{\ACM@linecountL}%
-      \fancyhead[RO]{\@folioblob}%
+      \fancyhead[LE]{\ACM@linecountL\@folioblob\@acmBadgeL}%
+      \fancyhead[LO]{\ACM@linecountL\@acmBadgeL}%
+      \fancyhead[RO]{\@acmBadgeR\@folioblob}%
+      \fancyhead[RE]{\@acmBadgeR}%
       \fancyheadoffset[RO,LE]{0.6\@folio@wd}%
     \or % acmlarge
       \if@ACM@nonacm\else%
@@ -7875,9 +7858,10 @@
         \@acmNumber, Article \@acmArticle.  Publication date:
         \@acmPubDate.}%
       \fi%
-      \fancyhead[RO]{\@folioblob}%
-      \fancyhead[LE]{\ACM@linecountL\@folioblob}%
-      \fancyhead[LO]{\ACM@linecountL}%
+      \fancyhead[RO]{\@acmBadgeR\@folioblob}%
+      \fancyhead[RE]{\@acmBadgeR}%
+      \fancyhead[LE]{\ACM@linecountL\@folioblob\@acmBadgeL}%
+      \fancyhead[LO]{\ACM@linecountL\@acmBadgeL}%
       \fancyheadoffset[RO,LE]{1.4\@folio@wd}%
     \or % acmtog
       \if@ACM@nonacm\else%
@@ -7885,16 +7869,16 @@
         \@acmNumber, Article \@acmArticle.  Publication date:
         \@acmPubDate.}%
       \fi%
-      \fancyhead[L]{\ACM@linecountL}%
-      \fancyhead[R]{\ACM@linecountR}%
+      \fancyhead[L]{\ACM@linecountL\@acmBadgeL}%
+      \fancyhead[R]{\@acmBadgeR\ACM@linecountR}%
     \else % Conference proceedings
-      \fancyhead[L]{\ACM@linecountL}%
-      \fancyhead[R]{\ACM@linecountR}%
+      \fancyhead[L]{\ACM@linecountL\@acmBadgeL}%
+      \fancyhead[R]{\@acmBadgeR\ACM@linecountR}%
       \fancyfoot[C]{\if@ACM@printfolios\footnotesize\thepage\fi}%
     \fi
   \else
-    \fancyhead[L]{\ACM@linecountL}%
-    \fancyhead[R]{\ACM@linecountR}%
+    \fancyhead[L]{\ACM@linecountL\@acmBadgeL}%
+    \fancyhead[R]{\@acmBadgeR\ACM@linecountR}%
     \fancyfoot[C]{\if@ACM@printfolios\footnotesize\thepage\fi}%
   \fi
   \if@ACM@timestamp
@@ -7914,8 +7898,8 @@
       \raisebox{-\dimexpr(0.25\textheight*\ACM@ArticleType@nr)}{%
       \rotatebox{90}{\colorbox{@ACM@Article@color}{\color{white}%
           \strut\ACM@ArticleType~Article}}}}%
-    \ACM@linecountL}%
-  \fancyhead[R]{\makebox[\z@][r]{\box\@ACM@acmcpbox}}%
+    \ACM@linecountL\@acmBadgeL}%
+  \fancyhead[R]{\@acmBadgeR\makebox[\z@][r]{\box\@ACM@acmcpbox}}%
   \fancyfoot[L,C]{}%
   \fancyfoot[R]{\footnotesize
     \@journalName, Volume~\@acmVolume, Issue~\@acmNumber,
