--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -1264,21 +1264,24 @@ a numbered list of URLs with an optional brief description of the content found 
 
 \section{Problem statement}
 
-In this document we discuss how to write an ACM article.
+In this document we discuss how to write an ACM article.  
 
 \section{Methods}
 
-This document provides \LaTeX\ templates for the article.
+This document provides \LaTeX\ templates for the article. We
+demonstrate different versions of ACM styles and show various options
+and commands.  We add extensive documentation for these commands and
+show examples of their use.
 
 \section{Results}
 
-We hope the resulting templates help the reader to write ACM papers
-and proceedings.
+We hope the resulting templates and documentation will help the
+readers to write submissions for ACM journals and proceedings.
 
 \section{Significance}
 
 This document is important for anybody wanting to comply with the
-requirements of ACM publishing.
+requirements of ACM publishing.  
 
 
 \end{document}
