--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -454,7 +454,7 @@ Frequently-used parameters, or combinations of parameters, include:
 \begin{itemize}
 \item {\texttt{anonymous,review}}: Suitable for a ``double-blind''
   conference submission. Anonymizes the work and includes line
-  numbers. Use with the \texttt{\acmSubmissionID} command to print the
+  numbers. Use with the \texttt{\string\acmSubmissionID} command to print the
   submission's unique ID on each page of the work.
 \item{\texttt{authorversion}}: Produces a version of the work suitable
   for posting by the author.
