Preserve font size in material after "Received"

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -5517,7 +5517,7 @@
   \fi}
 \AtEndDocument{%
   \ifx\@received\@empty\else
-    \par\bigskip\noindent\small\normalfont\@received\par
+    \par\bigskip\noindent{\small\normalfont\@received\par}%
   \fi}
 %    \end{macrocode}
 %
