--- a/README
+++ b/README
@@ -15,6 +15,7 @@ Changes
 Version 1.89   Bug fixes
 	       Redesign of ACMCP
 	       New positioning of badges
+	       New journals: PACMMOD, TOPML
 
 Version 1.88   New ISSNs
 	       Documentation updates
