--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-% Copyright 2016-2022, Association for Computing Machinery
+% Copyright 2016-2023, Association for Computing Machinery
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
 % version 1.3 of this license or (at your option) any
@@ -57,7 +57,7 @@
 % \ifx\currentjob\guide\OnlyDescription\fi
 % \GetFileInfo{acmart.dtx}
 % \title{\LaTeX{} Class for the \emph{Association for Computing
-% Machinery}\thanks{\copyright 2016--2022, Association for Computing Machinery}}
+% Machinery}\thanks{\copyright 2016--2023, Association for Computing Machinery}}
 % \author{Boris Veytsman\thanks{%
 % \href{mailto:borisv@lk.net}{\texttt{borisv@lk.net}},
 % \href{mailto:boris@varphi.com}{\texttt{boris@varphi.com}}}}
@@ -305,13 +305,13 @@
 %   manuscript & A manuscript. This is the default. \\
 %   acmsmall & Small single-column format.  Used for ACMJCSS, CIE, CSUR,
 %            DLT, FAC, GAMES, JACM, JATS,  JDIQ, JDS, JEA, JERIC,
-%            JETC, JRC, PACMCGIT, PACMHCI, PACMNET,
+%            JETC, JRC, PACMCGIT, PACMHCI, PACMMOD, PACMNET,
 %            PACMPL, TAAS, TACCESS, TACO,
 %            TALG, TALLIP (formerly TALIP), TCPS, TDS,
 %            TEAC, TECS, TELO, THRI, TIIS, TIOT, TISSEC, TIST, TKDD, TMIS,
 %            TOCE, TOCHI, TOCL,
 %            TOCS, TOCT, TODAES, TODS, TOIS, TOIT, TOMACS, TOMM (formerly
-%            TOMCCAP), TOMPECS, TOMS, TOPC, TOPLAS, TOPS, TORS
+%            TOMCCAP), TOMPECS, TOMS, TOPC, TOPLAS, TOPML, TOPS, TORS
 %            TOS, TOSEM, TOSN, TQC, TRETS,
 %            TSAS, TSC, TSLP and TWEB, including special issues. \\
 %   acmlarge  & Large single-column format.  Used for DTRAP, HEALTH,
@@ -2144,6 +2144,7 @@
 %     PACMCGIT & Proceedings of the ACM on Computer Graphics and
 %     Interactive Techniques\\
 %     PACMHCI & PACM on Human-Computer Interaction\\
+%     PACMOD & PACM on Management of Data\\
 %     PACMNET & PACM on Networking\\
 %     PACMPL & PACM on Programming Languages \\
 %     POMACS & PACM on Measurement and Analysis of Computing Systems \\
@@ -2184,6 +2185,7 @@
 %     TOMS & ACM Transactions on Mathematical Software\\
 %     TOPC & ACM Transactions on Parallel Computing\\
 %     TOPLAS & ACM Transactions on Programming Languages and Systems\\
+%     TOPML & ransactions on Probabilistic Machine Learning\\
 %     TOPS & ACM Transactions on Privacy and Security\\
 %     TORS & ACM Transactions on Recommender Systems\\
 %     TOS & ACM Transactions on Storage\\
@@ -2267,7 +2269,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2022/10/24 v1.88 Typesetting articles for the Association for Computing Machinery]
+[2023/03/25 v1.89 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -4327,6 +4329,8 @@
 % \changes{1.88}{2022/10/19}{Added ISSN for GAMES}
 % \changes{1.88}{2022/10/23}{Added ISSN for ACMJCSS}
 % \changes{1.88}{2022/10/24}{Added PACMNET}
+% \changes{1.89}{2023/03/25}{Added PACMMOD}
+% \changes{1.89}{2023/03/25}{Added TOPML}
 %
 % We use the |xkeyval| interface to define journal titles and the relevant
 % information
@@ -4353,6 +4357,7 @@
   JRC,%
   PACMCGIT,%
   PACMHCI,%
+  PACMMOD,%
   PACMNET,%
   PACMPL,%
   POMACS,%
@@ -4391,6 +4396,7 @@
   TOPC,%
   TOPS,%
   TOPLAS,%
+  TOPML,%
   TORS,%
   TOS,%
   TOSEM,%
@@ -4498,6 +4504,10 @@
   \def\@permissionCodeOne{2573-0142}%
   \@ACM@screentrue
   \PackageInfo{\@classname}{Using screen mode due to \@journalCode}%
+\or % PACMMOD
+  \def\@journalName{Proceedings of the ACM on Management of Data}%
+  \def\@journalNameShort{Proc. ACM Manag. Data}%
+  \def\@permissionCodeOne{2836-6573}%
 \or % PACMNET
   \def\@journalName{Proceedings of the ACM on Networkng}%
   \def\@journalNameShort{Proc. ACM Netw.}%
@@ -4658,6 +4668,10 @@
   \def\@journalName{ACM Transactions on Programming Languages and Systems}%
   \def\@journalNameShort{ACM Trans. Program. Lang. Syst.}%
   \def\@permissionCodeOne{0164-0925}%
+\or % TOPML
+  \def\@journalName{ACM Transactions on Probabilistic Machine Learning}%
+  \def\@journalNameShort{ACM Trans. Probab. Mach. Learn.}%
+  \def\@permissionCodeOne{}%
 \or % TORS
   \def\@journalName{ACM Transactions on Recommender Systems}%
   \def\@journalNameShort{ACM Trans. Recomm. Syst.}%
