--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2269,7 +2269,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2023/03/25 v1.89 Typesetting articles for the Association for Computing Machinery]
+[2023/03/26 v1.89a Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
