--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2269,7 +2269,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2023/03/26 v1.89a Typesetting articles for the Association for Computing Machinery]
+[2023/03/30 v1.90 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -4331,6 +4331,7 @@
 % \changes{1.88}{2022/10/24}{Added PACMNET}
 % \changes{1.89}{2023/03/25}{Added PACMMOD}
 % \changes{1.89}{2023/03/25}{Added TOPML}
+% \changes{1.90}{2023/03/30}{Added TOPML eISSN}
 %
 % We use the |xkeyval| interface to define journal titles and the relevant
 % information
@@ -4671,7 +4672,7 @@
 \or % TOPML
   \def\@journalName{ACM Transactions on Probabilistic Machine Learning}%
   \def\@journalNameShort{ACM Trans. Probab. Mach. Learn.}%
-  \def\@permissionCodeOne{}%
+  \def\@permissionCodeOne{2836-8924}%
 \or % TORS
   \def\@journalName{ACM Transactions on Recommender Systems}%
   \def\@journalNameShort{ACM Trans. Recomm. Syst.}%
