--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.90   Journal ISSN updated
+
 Version 1.89a  Added version info to .bst
 
 Version 1.89   Bug fixes
