--- a/acmart.dtx
+++ b/acmart.dtx
@@ -319,7 +319,7 @@
 %   acmtog   & Large double-column format.  Used for
 %          TOG, including annual conference Technical Papers.\\
 %   sigconf & Proceedings format for most ACM
-%          conferences (with the exception of SIGPlAN) and all ICPS
+%          conferences (with the exception of SIGPLAN) and all ICPS
 %          volumes.\\
 %   sigplan & Proceedings format for SIGPLAN conferences.\\
 %   acmengage & ACM EngageCSEdu Course materials.\\
